--- a/PortfolioMiniProject/index.html
+++ b/PortfolioMiniProject/index.html
@@ -11,34 +11,48 @@
 <body>
                <header>
 
-                              <img class="circular_image" src=" images/passphoto.jpg" width=300px>
+                              <img class="rectangle_image" src=" images/passportphoto.jpg">
+
 
                               <div class="name">
-                                             <h1> Sarayu Polkampally</h1>
+                                             <h3>Hello!</h3>
+                                             <h1> I'm Sarayu Polkampally
+                                             </h1>
+                                             <p id="tagline">
+                                                            <i>an aspiring UI/UX Designer.</i>
+                                             </p>
                               </div>
                </header>
                <main>
 
 
+
                               <div class=" navigationmain">
-                                             <nav>
-                                                            <h3> <a href=/Users/sarayupolkampally/Documents/Interactive_design1/index.html>Resume</a> |
-                                                                           <a href=" /Users/sarayupolkampally/Desktop/Interactive_design1/Projects/index.html"> Projects </a> |
-                                                                           <a href="/Recommendations">Recommendations</a>
-                                                            </h3>
+                                             <nav class="frontnav">
+
+                                                            <ul class="bulletstyle">
+
+                                                                           <li><a href="/Resume.html">Resume</a></li>
+                                                                           <li> <a href="/projects/html"> Projects </a>
+
+                                                                           <li>
+                                                                                          <a href="/Recommendations.html">Recommendations</a>
+                                                                           </li>
+
+                                                            </ul>
+
                                              </nav>
                               </div>
 
 
-                              <div id="contact">
-                                             <p>(669)-499-6752 | sarayu.polkampally@gmail.com </p>
-
-                              </div>
 
 
 
                </main>
 
+               <footer>
+                              <p>(669)-499-6752 | sarayu.polkampally@gmail.com </p>
+               </footer>
 
 
                <div id="root"></div>
