--- a/PortfolioMiniProject/recommendations.html
+++ b/PortfolioMiniProject/recommendations.html
@@ -10,21 +10,42 @@
 
 <body>
 
-               <header class="topbar">
+               <header>
+                              <div class="topbar">
+                                             <div id="left"> <a href=" /index.html">Sarayu Polkampally</a>
+                                             </div>
 
-
-                              <nav>
-                                             <h1> <a href="/index"> Sarayu Polkampally</h1>
-                                             <h3> <a href="/Resume">Resume</a> |
-                                                            <a href="/Projects"> Projects </a> |
-                                                            <a href="/Recommendations">Recommendations</a>
-                                             </h3>
-                              </nav>
-
+                                             <div id="right"> <a class="resumet" href=" /resume.html">Resume</a>
+                                                            <a class="projectst" href=" /projects.html">Projects</a>
+                                                            <a class="reccomt" href=" /recommendations.html"> Recommendations</a>
+                                             </div>
+                              </div>
 
                </header>
                <hr>
                </hr>
+               <main>
+                              <div class="container">
+                                             <img src="images/suniti-vadalkar.jpeg" style="width:90px">
+                                             <p>Suniti Vadalkar<br>Head of Design, Art, and Performance, FLAME University</p>
+
+
+                                             <p><i>"She is committed to learning and thrives to give her best"</i>
+                                             </p>
+                                             <a href="https://drive.google.com/file/d/1xFpjYIcYw3KZoyGI5Om6FswWKV4mgDns/view?usp=sharing"> Full Recommendation</a>
+                              </div>
+
+                              <div class="container">
+                                             <img src="images/rishikesh.jpeg" alt="Avatar" style="width:90px">
+                                             <p> Rishikesh Joshi<br>Co-Founder, Maitri Designs
+                                             </p>
+                                             <p>
+                                                            <i>"She is great at visualising, creating and executing her ideas"</i>
+                                             </p>
+                                             <a href="https://drive.google.com/file/d/1GgpM83Bnn_SU_ghMCE2apnsmnQrA_HR3/view?usp=sharing"> Full Recommendation</a>
+                              </div>
+               </main>
+
 
 
                <div id="root"></div>
