--- a/PortfolioMiniProject/resume.html
+++ b/PortfolioMiniProject/resume.html
@@ -12,18 +12,16 @@
 
 <body>
 
+               <header>
+                              <div class="topbar">
+                                             <div id="left"> <a href=" /index.html">Sarayu Polkampally</a>
+                                             </div>
 
-               <header class="topbar">
-
-
-                              <nav>
-                                             <h1> <a href="/index"> Sarayu Polkampally</h1>
-                                             <h3> <a href="/Resume">Resume</a> |
-                                                            <a href="/Projects"> Projects </a> |
-                                                            <a href="/Recommendations">Recommendations</a>
-                                             </h3>
-                              </nav>
-
+                                             <div id="right"> <a class="resumet" href=" /resume.html">Resume</a>
+                                                            <a class="projectst" href=" /projects.html">Projects</a>
+                                                            <a class="reccomt" href=" /recommendations.html"> Recommendations</a>
+                                             </div>
+                              </div>
 
                </header>
                <hr>
@@ -33,24 +31,31 @@
                                              <h2>Education</h2>
 
                                              <ul>
-                                                            <li>
-                                                                           <a href=" https://www.flame.edu.in/"><b>FLAME University</b></a> - Graduated with a B.A in Psychology (2019-2022)
+                                                            <li><a href="https://www.sfsu.edu/">
+                                                                                          San Francisco State University </a>- Masters In Design (Current)</li>
+                                                            <li> <a href=" https://www.flame.edu.in/">FLAME University</a> - Graduated with a B.A in Psychology (2019-2022)
                                                             </li>
 
                                                             <li>
-                                                                           <a href="https://pageacademy.com/"> <b>Page Junior College</b></a> (2017-2019)
+                                                                           <a href="https://pageacademy.com/"> Page Junior College</a> (2017-2019)
                                                             </li>
 
                                                             <li>
-                                                                           <a href="https://www.dpshyderabad.in/"> <b>Delhi Public School</b></a> (2004-2017)
+                                                                           <a href="https://www.dpshyderabad.in/"> Delhi Public School</a> (2004-2017)
                                                             </li>
                                              </ul>
 
                               </section>
                               <hr>
                               <section>
-                                             <h2>Experience</h2>
+                                             <h2>Work<br>Experience</h2>
                                              <ul class="bulletstyle">
+
+                                                            <li><b>Open Mentorship</b> (Ongoing)</li>
+                                                            <p> Working on an opensource project called OpenMentorship, a platform that connects mentees, who are looking for guidance and advice, to mentors who are
+                                                                           looking to help the community and
+                                                                           guide them towards achieving their goals.</p>
+
                                                             <li>
                                                                            <b>Raasta Studios</b> (2021)
                                                             </li>
@@ -66,7 +71,18 @@
 
                               </section>
                               <hr>
-
+                              <section>
+                                             <h2>Academic<br>Projects</h2>
+                                             <ul class="bulletstyle">
+                                                            <li><b>Discover India Program</b> (2020)</li>
+                                                            <p>Discover India Program is a four-credit course at FLAME University that requires students to form groups of eight and carry out a research study and prepare a report on any thematic topic
+                                                                           related to an aspect of Indian culture and heritage. <br>I was part of a group that chose to highlight the Matrilineal Khasi Community of Meghalaya and its current state.To
+                                                                           meet
+                                                                           our research objectives, we carried out qualitative research. <br>Due to restrictions caused by the pandemic, a small sample of participants (Khasis) were remotely interviewed
+                                                                           to account for primary data, while the rest of the report was supported by secondary research/data. The results and learning outcomes of the research will be combined into
+                                                                           a
+                                                                           report. </p>
+                              </section>
                </main>
 
 
