--- a/PortfolioMiniProject/projects.html
+++ b/PortfolioMiniProject/projects.html
@@ -9,28 +9,39 @@
 </head>
 
 <body>
-               <header class="topbar">
+               <header>
+                              <div class="topbar">
+                                             <div id="left"> <a href=" /index.html">Sarayu Polkampally</a>
+                                             </div>
+
+                                             <div id="right"> <a class="resumet" href=" /resume.html">Resume</a>
+                                                            <a class="projectst" href=" /projects.html">Projects</a>
+                                                            <a class="reccomt" href=" /recommendations.html"> Recommendations</a>
+                                             </div>
+                              </div>
+
+               </header>
+
+               <hr>
+               </hr>
+
+               <main>
 
                               <nav>
-                                             <h1> <a href="/index"> Sarayu Polkampally</h1>
-                                             <h3> <a href="/Resume">Resume</a> |
-                                                            <a href="/Projects"> Projects </a> |
-                                                            <a href="/Recommendations">Recommendations</a>
-                                             </h3>
+                                             <div class=<a href=" https://drive.google.com/file/d/1dbCJ3T2ahx41nw9romw0HOicu2Hrpa5C/view"> <img class="khasisproject" src="images/khasis.png" width="400px" height="375px">
+
+                                                            </a>
+
+                                                            <a href="https://www.figma.com/file/HMPdStPZdlkW8wBhojhATf/Untitled"> <img class="openmentorship" src="images/openmentorship.png" width="400px" height="375px"></a>
+                                                            <a href="https://www.figma.com/file/dlElJzULIJR4Cs3r0Y0iEG/Untitled?node-id=0%3A1"> <img class="punemetro" src="images/punemetroapp.png" width="400px" height="375px"></a>
+
                               </nav>
-                              </ header>
-                              <hr>
-                              </hr>
-                              <main>
-                                             <nav>
-                                                            <img class="khasisproject" src="images/khasis.png" width="300px">
-                                             </nav>
 
-                                             <h3><a href="https://drive.google.com/file/d/1dbCJ3T2ahx41nw9romw0HOicu2Hrpa5C/view"> Research Project</h3>
 
-                              </main>
-                              <div id="root"></div>
-                              <script src="main.js" type="text/javascript"></script>
+               </main>
+               <div id=" root">
+               </div>
+               <script src="main.js" type="text/javascript"></script>
 </body>
 
 </html>
