--- a/PortfolioMiniProject/index.html
+++ b/PortfolioMiniProject/index.html
@@ -32,11 +32,11 @@
 
                                                             <ul class="bulletstyle">
 
-                                                                           <li><a href="/Resume.html">Resume</a></li>
-                                                                           <li> <a href="/projects/html"> Projects </a>
+                                                                           <li><a href="resume.html">Resume</a></li>
+                                                                           <li> <a href="projects/html"> Projects </a>
 
                                                                            <li>
-                                                                                          <a href="/Recommendations.html">Recommendations</a>
+                                                                                          <a href="recommendations.html">Recommendations</a>
                                                                            </li>
 
                                                             </ul>
