--- a/PortfolioMiniProject/recommendations.html
+++ b/PortfolioMiniProject/recommendations.html
@@ -12,12 +12,12 @@
 
                <header>
                               <div class="topbar">
-                                             <div id="left"> <a href=" /index.html">Sarayu Polkampally</a>
+                                             <div id="left"> <a href="index.html">Sarayu Polkampally</a>
                                              </div>
 
-                                             <div id="right"> <a class="resumet" href=" /resume.html">Resume</a>
-                                                            <a class="projectst" href=" /projects.html">Projects</a>
-                                                            <a class="reccomt" href=" /recommendations.html"> Recommendations</a>
+                                             <div id="right"> <a class="resumet" href="resume.html">Resume</a>
+                                                            <a class="projectst" href="projects.html">Projects</a>
+                                                            <a class="reccomt" href="recommendations.html"> Recommendations</a>
                                              </div>
                               </div>
 
