--- a/PortfolioMiniProject/recommendations.html
+++ b/PortfolioMiniProject/recommendations.html
@@ -36,7 +36,7 @@
                               </div>
 
                               <div class="container">
-                                             <img src="images/rishikesh.jpeg" alt="Avatar" style="width:90px">
+                                             <img src="images/Rishikesh.jpeg" alt="Avatar" style="width:90px">
                                              <p> Rishikesh Joshi<br>Co-Founder, Maitri Designs
                                              </p>
                                              <p>
