--- a/PortfolioMiniProject/index.html
+++ b/PortfolioMiniProject/index.html
@@ -33,7 +33,7 @@
                                                             <ul class="bulletstyle">
 
                                                                            <li><a href="resume.html">Resume</a></li>
-                                                                           <li> <a href="projects/html"> Projects </a>
+                                                                           <li> <a href="projects.html"> Projects </a>
 
                                                                            <li>
                                                                                           <a href="recommendations.html">Recommendations</a>
